--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "table",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "localhost:9999",
+  "proxy": "http://localhost:9999",
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
